# CZXing

./: build.gradle
czxing/: build.gradle
czxing/src/main/: AndroidManifest.xml
czxing/src/main/cpp/: BlockingQueue.h  CMakeLists.txt  CopyOfFindAlignmentPattern.h  FrameData.h  ImageScheduler.cpp  ImageScheduler.h  JNIUtils.cpp  JNIUtils.h  JavaCallHelper.cpp  JavaCallHelper.h  QRCodeFinder.cpp  QRCodeFinder.h  QRCodeRecognizer.cpp  QRCodeRecognizer.h  ThreadPool.h  ThresholdTool.h  TimeProfiler.h  ZXingHooker.cpp  ZXingHooker.h  android_utils.cpp  android_utils.h  native-lib.cpp
czxing/src/main/cpp/iconv/: CMakeLists.txt
czxing/src/main/cpp/iconv/lib/: loop_unicode.h
czxing/src/main/cpp/include/opencv2/: imgproc.hpp
czxing/src/main/cpp/include/opencv2/dnn/: all_layers.hpp
czxing/src/main/cpp/include/opencv2/videoio/legacy/: constants_c.h
czxing/src/main/cpp/zbar/: CMakeLists.txt
czxing/src/main/cpp/zxing/: CMakeLists.txt
czxing/src/main/cpp/zxing/src/: BirdgeBinaryBitmap.cpp  BirdgeBinaryBitmap.h  GridSampler.cpp  GridSampler.h  HookBase.h  HybridBinarizer.cpp  Reader.h
czxing/src/main/cpp/zxing/src/qrcode/: AntFinderPatternFinder.cpp  AntFinderPatternFinder.h  QRAlignmentPattern.cpp  QRAlignmentPattern.h  QRAlignmentPatternFinder.h  QRDetector.cpp  QRDetector.h  QRFinderPatternFinder.cpp  QRReader.cpp  QRReader.h  QRStrictAlignmentPatternFinder.cpp  QRStrictAlignmentPatternFinder.h
czxing/src/main/cpp/zxing/src/textcodec/: GBTextDecoder.cpp  GBTextEncoder.cpp
czxing/src/main/java/me/devilsen/czxing/: ScanActivity.java  ScanResult.java  ScannerManager.java
czxing/src/main/java/me/devilsen/czxing/camera/: CameraSurface.java
czxing/src/main/java/me/devilsen/czxing/code/: BarcodeReader.java  CodeResult.java  NativeSdk.java
czxing/src/main/java/me/devilsen/czxing/processor/: BarcodeProcessor.java
czxing/src/main/java/me/devilsen/czxing/thread/: Dispatcher.java  FrameData.java  ProcessRunnable.java
czxing/src/main/java/me/devilsen/czxing/util/: SaveImageUtil.java  ScreenUtil.java  SoundPoolUtil.java
czxing/src/main/java/me/devilsen/czxing/view/: BarCoderView.java  DefaultZoomStrategy.java  IZoomQRCodeStrategy.java  ScanActivityDelegate.java  ScanBoxView.java  ScanListener.java  ScanView.java
czxing/src/main/res/values/: colors.xml
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/me/sam/czxing/: FindQRCodePositionActivity.java  MainActivity.java  MyApplication.java  NotFullScanActivity.java  ProfileModel.java  ScanBoxTestActivity.java
sample/src/main/java/me/sam/czxing/activitys/: CallBackTestActivity.java  DelegateActivity.java  FindQRCodePositionActivity.java  MainActivity.java  MyCardActivity.java  NotFullScanActivity.java  ScanBoxTestActivity.java  WriteCodeActivity.java  WriteQRCodeActivity.java
sample/src/main/java/me/sam/czxing/db/: AppDatabase.java  DatabaseHelper.java  TimeConverter.java
sample/src/main/java/me/sam/czxing/db/daos/: ProfileModelDao.java
sample/src/main/java/me/sam/czxing/db/entities/: ProfileModel.java
sample/src/main/java/me/sam/czxing/loaders/: FindQRCodeTransformer.java  GlideEngine.java
sample/src/main/res/layout/: activity_find_qr.xml  activity_main.xml  activity_test_not_full_scan_view.xml
